# ChangeLog for x11-misc/x11vnc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.67 2009/03/02 16:06:44 ranger Exp $

  02 Mar 2009; Brent Baude <ranger@gentoo.org> x11vnc-0.9.6.ebuild:
  Marking x11vnc-0.9.6 ppc64 for bug 256029

  22 Feb 2009; Sven Wegener <swegener@gentoo.org> -x11vnc-0.9.2-r1.ebuild,
  -x11vnc-0.9.3.ebuild, -x11vnc-0.9.4.ebuild, -x11vnc-0.9.5.ebuild:
  Cleanup.

  06 Feb 2009; Jeroen Roovers <jer@gentoo.org> x11vnc-0.9.6.ebuild:
  Stable for HPPA (bug #256029).

  01 Feb 2009; Markus Meier <maekke@gentoo.org> x11vnc-0.9.6.ebuild:
  amd64 stable, bug #256029

  24 Jan 2009; nixnut <nixnut@gentoo.org> x11vnc-0.9.6.ebuild:
  ppc stable #256029

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> x11vnc-0.9.6.ebuild:
  arm/ia64/sh/sparc/x86 stable wrt #256029

*x11vnc-0.9.6 (13 Dec 2008)

  13 Dec 2008; Sven Wegener <swegener@gentoo.org> +x11vnc-0.9.6.ebuild:
  Version bump.

*x11vnc-0.9.5 (25 Oct 2008)

  25 Oct 2008; Sven Wegener <swegener@gentoo.org> +x11vnc-0.9.5.ebuild:
  Version bump.

  21 Sep 2008; Mike Frysinger <vapier@gentoo.org> x11vnc-0.9.3.ebuild,
  x11vnc-0.9.4.ebuild:
  Add some ppc64 love.

*x11vnc-0.9.4 (17 Sep 2008)

  17 Sep 2008; Sven Wegener <swegener@gentoo.org> +x11vnc-0.9.4.ebuild:
  Version bump.

  03 May 2008; Richard Freeman <rich0@gentoo.org> x11vnc-0.9.3.ebuild:
  amd64 stable

  11 Jan 2008; Sven Wegener <swegener@gentoo.org> x11vnc-0.9.2-r1.ebuild,
  x11vnc-0.9.3.ebuild:
  Add dependency on x11-proto/inputproto for bug #204589.

  17 Dec 2007; Raúl Porcel <armin76@gentoo.org> x11vnc-0.9.3.ebuild:
  ia64/x86 stable

*x11vnc-0.9.3 (11 Oct 2007)

  11 Oct 2007; Sven Wegener <swegener@gentoo.org> +x11vnc-0.9.3.ebuild:
  Version bump.

  11 Oct 2007; Sven Wegener <swegener@gentoo.org>
  -files/x11vnc-0.9.1-ssl.patch, -x11vnc-0.9.1.ebuild, -x11vnc-0.9.2.ebuild:
  Cleanup.

  02 Oct 2007; Lars Weiler <pylon@gentoo.org> x11vnc-0.9.2-r1.ebuild: