@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST x11vnc-0.9.6.tar.gz 2461744 RMD160 5587d325fc9a3d735e653fefa2e4425c9e737477 SHA1 2cc67604a8a4bb0c40738f3bdf7295dee9637eb3 SHA256 35cf292b9f46142ddfb5ec5ae169d2ec33f2e4fa68cc7f49a0d98cac55727e1a
+DIST x11vnc-0.9.7.tar.gz 2528334 RMD160 e9eec21ca31b5ec215898624057edc6bd275edcb SHA1 0ce3a0dd83694fddd64d262320ab7d2edb5310cc SHA256 fd21224ec09ca5294ba0627433e4d2cb726d389c7818d162f152374e6d693342
 EBUILD x11vnc-0.9.6.ebuild 1664 RMD160 b2443f8429e39be355ee158ef3653636f76ec0aa SHA1 1150c935fffec63fbba570ca3c1ce452e2972df3 SHA256 25b040aed0007c9c704d18bb3a2789b07c6aae23740f0835b1639b7998bbf9f8
-MISC ChangeLog 8663 RMD160 d544fdcc80ab9e193ac8bfc9ad826fe09c01065f SHA1 348d183c03dca0d4b2a2db18fb4ad6eaefc4b8ea SHA256 7be48ff78d31f0d937e3ef837d47a1e20248fd9f9a1ada52121874c494b9af45
+EBUILD x11vnc-0.9.7.ebuild 1660 RMD160 1d614bb1e9c893c25bacd273e908109ea3d6b262 SHA1 53af9070fbd484cdf70e7159b180d88954b3c32b SHA256 523389f81dcff9aee14944f13a5d663a5872d1b5aae3c06c87d9d040c38a2a3f
+MISC ChangeLog 8783 RMD160 3c8b33d2a13129236adeba13385c258afa0c4f1c SHA1 5643e8072ff7f56d147811638601b38be6fcdf99 SHA256 bb6f9eda117230668b875ebe342d69bf0cfa7c37e18af4b4342ca163aebf1986
 MISC metadata.xml 599 RMD160 42954f89865c12c5fd4707bc784037f2231c6db6 SHA1 4ce649d4717b45387cdfd9b82984194deb8fcfad SHA256 ba34dcd7e24d8434345f6657e4c2d6b14b4e935590de308f23375e436c94556d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAknozzIACgkQI1lqEGTUzyQS9gCeKpHw50w4468vO6ijxyvh5JmM
+TSsAoIvs5362yD6DjKGkzkZbu8rrY/29
+=yeba
+-----END PGP SIGNATURE-----
